Change Log for OpenXava project
===============================

- Fix: @OnChange action not executed always on date with time editor when using calendar popup.
- Fix: @OnChange action is executed several times on date with time editor as changing using calendar.
- Fix: Time is formatted with incorrect separator with Java 8 for Serbian language.
- Fix: ValidValuesRadioButton editor for enums is not shown when the editor is read only.
- Fix: Tooltips do not work for @DescriptionsList references.
- Fix: Some missing images in Chinese version of course.   
- Fix: Wrong date formating when pressing ENTER in the field after fill the date. 
- Fix: Bad values for list filter in combos if @DescriptionsList uses several field for description. 
- New property distinct in DescriptionsCalculator to allow not duplicated results.
- Removed Tab.DESCRIPTIONS_LIST_SEPARATOR final variable. 
- Fix: Sometimes property name used for list configuration names do not match the column label in list. 
- Fix: Missing configuration property in LeanXcale documentation.
- Fix: Typos in View chapter of Reference Guide.
- Hibernate upgraded to 5.6.14.
- Tomcat-embed-core upgraded to 9.0.69.
- Tomcat-embed-jasper upgraded to 9.0.69.
- Tomcat-dbcp upgraded to 9.0.69.
- Driver versions in doc and new projects upgraded for Microsoft SQL Server, Informix, Firebird.

OpenXava 7.0.2 (2022-11-11)
---------------------------
- HSQLDB embedded database upgraded to 2.7.1.
- Embedded Tomcat used in development upgraded to 9.0.68.
- Hibernate upgraded to 5.6.12.
- Hibernate Envers upgraded to 5.6.12.
- JAXB impl upgraded to 2.3.7.
- PdfBox upgraded to 2.0.27.
- Groovy upgraded to 4.0.6.
- Driver versions in doc and new projects upgraded for MySQL and Db2.
- Documentation to modify OpenXava code with Maven version.
- Getting started guide using Visual Studio Code in English, Spanish and Chinese.
- Documentation to configure your OpenXava application to work with LeanXcale database.