@@ -156,11 +156,7 @@ public class SchemaTool {
 					if (onlySequences && !script.startsWith("create sequence ")) continue;
 					script = addSchema(script, supportsSchemasInIndexDefinitions, schema); 
 					if (console) {
-						/* tmr En changelog
-						System.out.print(script); 
-						System.out.println(';');
-						*/ 
-						System.out.println(script); // tmp
+						System.out.println(script); 
 					}
 					else {
 						log.info(XavaResources.getString("executing") + ": " + script);
